--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -133,3 +133,7 @@ h1,h2{
     border-right: 3px solid black;
     padding: 1rem;
 }
+#ver-plataforma .contenedor-ver-plataforma img{
+    border-radius: 8px;
+    filter: drop-shadow(1px -1px 6px #000);
+}
