--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -37,25 +37,39 @@ header nav a{
 }
 #seccion-tlou{
     background-color: #272727;
-    font-family: 'Barlow Condensed', sans-serif!important;
+    font-family: 'Josefin Sans', sans-serif!important;
 }
 #seccion-tlou h1{
-    font-family: 'Barlow Condensed', sans-serif!important;
+    font-family: 'Josefin Sans', sans-serif!important;
     backdrop-filter: blur(3px);
-}
-#seccion-tlou h1{
-    font-size: 3rem;
+    font-size: 3.5rem;
 }
 #seccion-tlou .banner{
     background-image: url('../media/img_juegos/tlouIIbg.jpg');
     background-size: cover;
-    height: 50vh;
+    background-position: center;
+    height: 70vh;
+}
+.nd-container{
+    backdrop-filter: blur(3px);
 }
 #seccion-tienda .container-tienda{
     height: 40vh;
 }
+#seccion-tlou h2{
+    font-size: 2.5rem;
+}
+#seccion-tlou p{
+    font-size: 1.5rem;
+}
 #seccion-tienda .container-tienda div{
     border: 2px solid;
+}
+#seccion-tlou footer *{
+    font-size: inherit;
+}
+#seccion-tlou img{
+    border-radius: 20px;
 }
 header nav{
     width: 100%;
@@ -283,6 +297,11 @@ table img{
 }
 .forms-volver{
     display: flex;
+}
+#ver-pass{
+    color: white;
+    cursor: pointer;
+    font-size: 1.5em;
 }
 .forms-volver input[type="submit"],a.forms-volver{
     z-index: 999;
@@ -689,13 +708,47 @@ box-shadow: -4px 7px 21px -7px rgba(0,0,0,0.75);
 #tienda .container-filtros{
     border-right: 3px solid #795fe3;
 }
-
+#seccion-tlou .abrir-menu{
+    display: block!important;
+}
+#seccion-tlou header{
+    display: none;
+    
+}
+.nd-container{
+    width: 25%;
+}
+@media screen and (min-width: 1400px) {
+    #seccion-tlou header{
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 100;
+        display: none;
+        height: auto;
+        transition: .8s;
+        
+    }
+}
 @media screen and (min-width: 1000px){
     .abrir-menu{
         display: none;
     }
     .logo-extra{
         display: none;
+    }
+}
+@media screen and (max-width: 1190px) {
+    #seccion-tlou h1{
+        font-size: 3rem;
+    }
+    .nd-container{
+        width: 50%;
+    }
+}
+@media screen and (max-width: 1000px) {
+    #seccion-tlou h1{
+        font-size: 2rem;
     }
 }
 @media screen and (max-width: 1000px){
@@ -709,6 +762,7 @@ box-shadow: -4px 7px 21px -7px rgba(0,0,0,0.75);
         transition: .8s;
         height: 70vh;
     }
+
     .logo-extra{
         display: block;
     }
@@ -727,5 +781,8 @@ box-shadow: -4px 7px 21px -7px rgba(0,0,0,0.75);
         flex-direction: column;
         align-items: center;
         height: 70vh;
+    }
+    .banner{
+        background-position: 45%!important;
     }
 }
